# mother_v2

./: .gitignore  .gitmodules  README.md  build.sh  run.sh  test_slam.sh  test_system.sh  test_vision.sh
src/: PLAN.md
src/motherv2_bringup/: CMakeLists.txt  package.xml
src/motherv2_bringup/config/: slam_params.yaml
src/motherv2_bringup/launch/: motherv2.launch.py  slam.launch.py  slam_test.launch.py  vision_test.launch.py
src/motherv2_camera/: package.xml  setup.cfg  setup.py
src/motherv2_camera/motherv2_camera/: camera_node.py
src/motherv2_detection/: package.xml  setup.cfg  setup.py
src/motherv2_detection/motherv2_detection/: detection_node.py
src/motherv2_follower/: package.xml  setup.cfg  setup.py
src/motherv2_follower/motherv2_follower/: follower_node.py
src/motherv2_interfaces/: CMakeLists.txt  package.xml
src/motherv2_interfaces/msg/: Detection.msg  DetectionArray.msg  MotorCommand.msg  ObjectEstimate.msg  ObjectEstimateArray.msg
src/motherv2_mqtt/: package.xml  setup.cfg  setup.py
src/motherv2_mqtt/motherv2_mqtt/: mqtt_node.py
src/motherv2_serial/: package.xml  setup.cfg  setup.py
src/motherv2_serial/motherv2_serial/: serial_node.py
src/motherv2_slam/: package.xml  setup.cfg  setup.py
src/motherv2_slam/motherv2_slam/: explore_node.py  slam_localization_node.py
src/motherv2_web/: package.xml  setup.cfg  setup.py
src/motherv2_web/motherv2_web/: api_node.py  web_node.py
