<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motherv2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for MotherV2 person following robot</description>
  <maintainer email="robot@mother.local">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>camera_ros</exec_depend>
  <exec_depend>motherv2_detection</exec_depend>
  <exec_depend>motherv2_follower</exec_depend>
  <exec_depend>motherv2_serial</exec_depend>
  <exec_depend>motherv2_web</exec_depend>
  <exec_depend>motherv2_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
