<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motherv2_follower</name>
  <version>0.1.0</version>
  <description>Person following node with PID control for MotherV2 robot</description>
  <maintainer email="robot@mother.local">robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>motherv2_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
